k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odp-dev
  labels:
    app.kubernetes.io/name: open-data-platform
    app.kubernetes.io/environment: dev
